updating system to insert custom exception and handlers exceptions