@@ -6,7 +6,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class PlayerMapper {
@@ -28,13 +27,13 @@ public class PlayerMapper {
     public List<PlayerDTO> toListDTO(List<Player> modelList) {
         return modelList.stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Player> toList(List<PlayerDTO> dtosList) {
         return dtosList.stream()
                 .map(this::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
