@@ -6,7 +6,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class QuizMapper {
@@ -28,13 +27,13 @@ public class QuizMapper {
     public List<QuizDTO> toListDTO(List<Quiz> modelList) {
         return modelList.stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Quiz> toList(List<QuizDTO> dtosList) {
         return dtosList.stream()
                 .map(this::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
